2007-07-06  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - test for http://bugs.webkit.org/show_bug.cgi?id=14545
          REGRESSION (r21854-r21869): Repro crash in RenderBlock::updateFirstLetter @ nola.com/rose/

        * fast/css/first-letter-capitalized-expected.checksum: Added.
        * fast/css/first-letter-capitalized-expected.png: Added.
        * fast/css/first-letter-capitalized-expected.txt: Added.
        * fast/css/first-letter-capitalized.html: Added.

2007-07-06  Darin Adler  <darin@apple.com>

        * mac/leopard/Skipped: Updated bug numbers for some bugs that were duplicates.

2007-07-06  Timothy Hatcher  <timothy@apple.com>

        Reviewed by Adam.

        <rdar://problem/5313506> Some attributed string layout tests have an extra space character on Leopard

        Leopard serializes empty attribute dictionaries as "{ }", turn these into "{}" to match Tiger.

        * fast/text/attributed-substring-from-range-001.html:
        * mac/leopard/Skipped: Don't skip this test anymore.

2007-07-06  Anders Carlsson  <andersca@apple.com>

        Reviewed by David Kilzer.

        <rdar://problem/5313502>
        Many webarchive tests fail due to different NSURLResponse serialization on Leopard
        
        * mac/leopard/Skipped:
        * webarchive/archive-with-unencoded-url-expected.txt:
        * webarchive/test-body-background-expected.txt:
        * webarchive/test-duplicate-resources-expected.txt:
        * webarchive/test-frameset-expected.txt:
        * webarchive/test-img-src-expected.txt:
        * webarchive/test-input-src-expected.txt:
        * webarchive/test-link-href-expected.txt:
        * webarchive/test-object-data-expected.txt:
        * webarchive/test-script-src-expected.txt:
        * webarchive/test-table-background-expected.txt:
        * webarchive/test-td-background-expected.txt:

2007-07-06  Timothy Hatcher  <timothy@apple.com>

        Reviewed by Oliver.
