@@ -1,0 +1,12 @@
+<iframe src="resources/early-load-cancel-inner.html"></iframe>
+
+<p>A series of unfortunate circumstances can lead to starting a load
+and then cancelling it while loading is deferred, thus leading to a
+mismatched set of callbacks (it gets cancelled without ever
+starting). If this test does not crash or fail an assertion, then that
+bug is fixed.</p>
+
+<script>
+if (window.layoutTestController)
+    layoutTestController.dumpAsText();
+</script>
