@@ -1,0 +1,17 @@
+<a id="test" onmousedown="test()">click here</a>
+<div id="outer">
+</div>
+<script>
+function test()
+{
+    document.getElementById("outer").innerHTML = "<iframe src='other.html'></iframe>";
+    document.getElementById("outer").innerHTML = "PASSED";
+}
+
+if (window.eventSender) {
+    eventSender.mouseMoveTo(20, 20);
+    eventSender.mouseDown();
+}
+
+</script>
+
